fix: fix main section gap

--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -1,8 +1,12 @@
 .header{
+    height: 6vh;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
+
     padding: 10px 10px;
+
     background-color: black;
 }
 
