--- a/src/styles/MainSection.module.css
+++ b/src/styles/MainSection.module.css
@@ -1,7 +1,7 @@
 .MainSection{
-  height: 100vh;
   width: 100%;
-  
+  height: 94vh;
+
   background-color:#000;
   color: rgba(255, 255, 255, 1);
 
@@ -12,16 +12,23 @@
   flex-direction: column;
   justify-content: center; 
   align-items: center; 
+  gap: 50px;
+}
+
+.textContainer{
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
 
 .MainSection h1{
   font-size: 3em;
   font-weight: 500;
+  line-height: 50px;
 }
 
 .MainSection h5{
-  line-height: 30px;
-  margin: 20px;
+  line-height: 25px;
   font-size: 1.7em;
   font-weight: 200;
 }
@@ -35,7 +42,6 @@
   height: 45.15px; 
   border-radius: 5px; 
   border: 0;
-  margin-top: 50px;
 
   color: rgba(255, 255, 255, 1); 
   background-color: rgba(40, 28, 115, 1); 
